Cookbook updates (#239)
* Fleshing out PartOf and AnnotationCollection
* Add 0309 cookbook recipe
* Update GitHub Actions
* Update freelib-utils version
* Fix Javadocs
* Add test for ManifestTarget
* Update behavior deserializer
* Address Sonatype issues